# net-triage

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/net_triage/: __init__.py  checks.py  cli.py  report.py
tests/: conftest.py  test_checks.py  test_cli.py
